--- a/istub.yml
+++ b/istub.yml
@@ -1,6 +1,11 @@
 packages:
 - name: s3transfer
   path: ./s3transfer-stubs
+  checks:
+    flake8: true
+    pyright: true
+    mypy: true
+    stubtest: true
   snapshots:
     stubtest: |-
       error: s3transfer.compat.BaseManager.shutdown is not present at runtime
