--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ packages = [
     { include = "s3transfer-stubs" },
 ]
 include = [
+    "LICENSE",
     "s3transfer-stubs/py.typed",
     "s3transfer-stubs/*.pyi",
     "s3transfer-stubs/*/*.pyi",
