--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -50,8 +50,8 @@ jobs:
           git config --global user.email "github-actions"
           git config --global user.name "github-actions@github.com"
           git add pyproject.toml
-          git commit -m "Release ${VERSION}"
-          git push
+          git commit -m "Release ${VERSION}" || true
+          git push || true
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
