--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,13 +65,12 @@ types-awscrt = "*"
 s3transfer = "*"
 awscrt = "*"
 botocore = "*"
-isort = "*"
-black = "*"
-mypy = "*"
-flake8 = "*"
-twine = "*"
-pyyaml = "*"
-istub = "*"
+isort = { version = "*", python = ">=3.10" }
+black = { version = "*", python = ">=3.10" }
+mypy = { version = "*", python = ">=3.10" }
+flake8 = { version = "*", python = ">=3.10" }
+twine = { version = "*", python = ">=3.10" }
+istub = { version = "*", python = ">=3.10" }
 botocore-stubs = "*"
 
 [build-system]
