--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -11,6 +11,18 @@ jobs:
   unit-tests:
     name: Code style
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "3.11"
+        include:
+          - version: "3.11"
+            check-formatting: "true"
+            check-consistency: "true"
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python for Poetry
@@ -32,6 +44,9 @@ jobs:
       - name: Install dependencies
         run: |
           poetry install -n
+      - name: Install missing dependencies
+        run: |
+          poetry run pip install flake8 mypy
       - name: Install Node.js dependencies
         run: |
           npm install -g pyright
@@ -40,8 +55,12 @@ jobs:
           poetry run flake8 s3transfer-stubs
           poetry run npx pyright s3transfer-stubs
           poetry run mypy s3transfer-stubs
+      - name: Check formatting
+        if: ${{ matrix.check-formatting }}
+        run: |
           poetry run black --check s3transfer-stubs
           poetry run isort -c s3transfer-stubs
       - name: Stubs consistency check
+        if: ${{ matrix.check-consistency }}
         run: |
-          poetry run istub
+          poetry run istub -d
