--- a/.github/workflows/publish_on_update.yml
+++ b/.github/workflows/publish_on_update.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           python -m pip install -U poetry pip
           poetry install -n
+          poetry run pip install -U twine
       - name: Install package
         run: |
           poetry run pip install ${PACKAGE}==${VERSION}
