--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -25,21 +25,17 @@ jobs:
             check-formatting: "true"
             check-consistency: "true"
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python for Poetry
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+      - uses: actions/checkout@v4
       - name: Install poetry
         run: |
-          python -m pip install poetry pip
+          pipx install poetry
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.version }}
           cache: "poetry"
       - name: Set up Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "18"
       - name: Install dependencies
