--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -19,44 +19,25 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
+          - "3.13"
         include:
-          - version: "3.11"
-            check-formatting: "true"
+          - version: "3.12"
             check-consistency: "true"
     steps:
       - uses: actions/checkout@v4
-      - name: Install poetry
-        run: |
-          pipx install poetry
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.version }}
-          cache: "poetry"
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18"
-      - name: Install dependencies
+          allow-prereleases: true
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Install the project
         run: |
-          poetry install -n
-      - name: Install missing dependencies
-        run: |
-          poetry run pip install flake8 mypy
-      - name: Install Node.js dependencies
-        run: |
-          npm install -g pyright
-      - name: Lint
-        run: |
-          poetry run flake8 s3transfer-stubs
-          poetry run npx pyright s3transfer-stubs
-          poetry run mypy s3transfer-stubs
-      - name: Check formatting
-        if: ${{ matrix.check-formatting }}
-        run: |
-          poetry run black --check s3transfer-stubs
-          poetry run isort -c s3transfer-stubs
+          uv sync --all-extras --dev
+      - name: Run pre-commit
+        run: uv run pre-commit run --all-files
       - name: Stubs consistency check
         if: ${{ matrix.check-consistency }}
         run: |
-          poetry run istub -d
+          uv run istub -d
