--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,11 @@
-[tool.black]
-line-length = 100
-include = '(s3transfer-stubs)/.*\.pyi?$'
-target-version = ['py37', 'py38', 'py39', 'py310']
-preview = true
-
-[tool.isort]
-profile = "black"
-line_length = 100
-src_paths = []
-
-[tool.poetry]
+[project]
 name = "types-s3transfer"
 version = "0.10.1"
+requires-python = ">=3.8"
 description = "Type annotations and code completion for s3transfer"
-authors = ["Vlad Emelianov <vlad.emelianov.nz@gmail.com>"]
-license = "MIT"
+authors = [{ name = "Vlad Emelianov", email = "vlad.emelianov.nz@gmail.com" }]
+license = { file = "LICENSE" }
 readme = "README.md"
-homepage = "https://youtype.github.io/mypy_boto3_builder/"
-repository = "https://github.com/youtype/types-s3transfer"
-documentation = "https://youtype.github.io/mypy_boto3_builder/"
 keywords = ["s3transfer", "type-annotations", "pyright", "mypy", "boto3"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -38,36 +25,37 @@ classifiers = [
     "Typing :: Stubs Only",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
-packages = [{ include = "s3transfer-stubs" }]
-include = [
-    "s3transfer-stubs/py.typed",
-    "s3transfer-stubs/*.pyi",
-    "s3transfer-stubs/*/*.pyi",
+
+[tool.uv]
+config-settings = { editable-mode = "strict" }
+dev-dependencies = [
+    "setuptools",
+    "pre-commit",
+    "s3transfer",
+    "botocore",
+    "mypy",
+    "ruff",
+    "pyright",
+    "istub",
+    "botocore-stubs",
+    "types-requests",
+    "types-python-dateutil",
+    "types-dataclasses",
 ]
 
-[tool.poetry.urls]
-"Documentation" = "https://youtype.github.io/mypy_boto3_builder/"
-"Source" = "https://github.com/youtype/types-s3transfer"
-"Bug Tracker" = "https://github.com/youtype/types-s3transfer/issues"
-
-[tool.poetry.dependencies]
-python = "^3.8"
-
-[tool.poetry.dev-dependencies]
-s3transfer = "*"
-awscrt = "*"
-botocore = "*"
-isort = { version = "*", python = ">=3.10" }
-black = { version = "*", python = ">=3.10" }
-mypy = { version = "*", python = ">=3.10" }
-flake8 = { version = "*", python = ">=3.10" }
-istub = { version = "*", python = ">=3.10" }
-botocore-stubs = "*"
-types-awscrt = "*"
+[project.urls]
+Homepage = "https://github.com/youtype/types-s3transfer"
+Documentation = "https://youtype.github.io/mypy_boto3_builder/"
+Repository = "https://github.com/youtype/types-s3transfer"
+Changelog = "https://github.com/youtype/types-s3transfer/releases"
+Issues = "https://github.com/youtype/types-s3transfer/issues"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ['setuptools']
+build-backend = 'setuptools.build_meta'
+
+[tool.setuptools]
+packages = ["s3transfer-stubs"]
 
 [tool.pyright]
 include = ["s3transfer-stubs"]
@@ -79,3 +67,57 @@ reportIncompatibleMethodOverride = "error"
 reportIncompatibleVariableOverride = "error"
 reportUnknownParameterType = "error"
 pythonVersion = "3.8"
+
+[tool.mypy]
+python_version = "3.8"
+warn_return_any = false
+warn_unused_ignores = false
+warn_unused_configs = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+ignore_errors = false
+
+[tool.ruff]
+exclude = [
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".mypy_cache",
+    ".pytest_cache",
+    ".ruff_cache",
+    ".venv",
+    ".vscode",
+    "build",
+    "dist",
+]
+
+line-length = 100
+indent-width = 4
+target-version = "py38"
+
+[tool.ruff.lint]
+select = ["E4", "E7", "E9", "F", "B", "I", "N", "D", "C4", "C90", "RUF", "PYI"]
+ignore = [
+    "E203",
+    "D107",
+    "D200",
+    "D203",
+    "D212",
+    "D401",
+    "D406",
+    "D407",
+    "D413",
+    "D417",
+]
+fixable = ["ALL"]
+unfixable = ["B"]
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+exclude = ["test_*.py", "*.pyi"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = false
+docstring-code-line-length = "dynamic"
