--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -22,7 +22,7 @@ jobs:
           - "3.13"
           - "3.14"
         include:
-          - version: "3.12"
+          - version: "3.13"
             check-consistency: "true"
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +37,7 @@ jobs:
         run: |
           uv sync --all-extras --dev
       - name: Run pre-commit
-        run: uv run pre-commit run --all-files
+        run: uvx pre-commit run --all-files
       - name: Stubs consistency check
         if: ${{ matrix.check-consistency }}
         run: |
