--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -22,6 +22,16 @@ jobs:
           - "3.13"
           - "3.14"
         include:
+          - version: "3.8"
+            check-consistency: "true"
+          - version: "3.9"
+            check-consistency: "true"
+          - version: "3.10"
+            check-consistency: "true"
+          - version: "3.11"
+            check-consistency: "true"
+          - version: "3.12"
+            check-consistency: "true"
           - version: "3.13"
             check-consistency: "true"
     steps:
