Refactor type checking command and update VSCode settings to exclude build artifacts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,13 @@
         "editor.codeActionsOnSave": {
             "source.organizeImports": "explicit"
         }
+    },
+    "files.exclude": {
+        ".venv": true,
+        ".mypy_cache": true,
+        ".ruff_cache": true,
+        "build": true,
+        "dist": true,
+        "*.egg-info": true,
     }
 }
