--- a/.github/workflows/publish_on_update.yml
+++ b/.github/workflows/publish_on_update.yml
@@ -81,11 +81,14 @@ jobs:
           git push
       - name: Publish to PyPI
         env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
           UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
         run: |
           rm -rf dist/* || true
-          uv build --sdist --wheel
-          uv publish
+          uv build --sdist --wheel --no-sources
+          # uv publish
+          uvx twine upload --non-interactive dist/*
       - name: Report status
         uses: actions/github-script@v7
         with:
