--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,8 @@ repos:
         language: system
         pass_filenames: false
         entry: uv run mypy s3transfer-stubs
+      - id: sanity
+        name: sanity
+        language: system
+        pass_filenames: false
+        entry: ./scripts/sanity_check.sh
