--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -22,8 +22,6 @@ jobs:
           - "3.13"
           - "3.14"
         include:
-          - version: "3.8"
-            check-consistency: "true"
           - version: "3.9"
             check-consistency: "true"
           - version: "3.10"
@@ -50,4 +48,5 @@ jobs:
         run: |
           uv sync --all-extras --dev
       - name: Run pre-commit
+        if: ${{ matrix.check-consistency }}
         run: uvx pre-commit run --all-files
