--- a/.github/workflows/publish_on_update.yml
+++ b/.github/workflows/publish_on_update.yml
@@ -79,16 +79,12 @@ jobs:
           git add pyproject.toml
           git commit -m "Release ${STUBS_VERSION}"
           git push
-      - name: Publish to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-          UV_PUBLISH_TOKEN: ${{ secrets.PYPI_TOKEN }}
+      - name: Build package
         run: |
           rm -rf dist/* || true
           uv build --sdist --wheel --no-sources
-          # uv publish
-          uvx twine upload --non-interactive dist/*
+      - name: Publish package to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
       - name: Report status
         uses: actions/github-script@v7
         with:
