--- a/.github/workflows/publish_on_update.yml
+++ b/.github/workflows/publish_on_update.yml
@@ -87,7 +87,8 @@ jobs:
           git config --global user.name "github-actions"
           git add pyproject.toml
           git commit -m "Release ${STUBS_VERSION}"
-          git push
+          git tag ${STUBS_VERSION}
+          git push --all --follow-tags
       - name: Report status
         uses: actions/github-script@v7
         with:
